# python-peripage

./: README.md  example.config.py  little_printer.py  pyproject.toml
